[B]Version 2.8.2[/B]

- Manage Queue & Subscription support

[B]Version 2.8.0[/B]

- initial Queue & Subscription support

[B]Version 2.7.9[/B]

- fixed incorrect directory total for some searches

[B]Version 2.7.8[/B]

- Updated hulu search with speed improvements
- disabled offsite search because hulu stopped providing offsite results

[B]Version 2.7.7[/B]

- Changed Hulu+ Filtering

[B]Version 2.7.6[/B]

- version increment to test update

[B]Version 2.7.5[/B]

- Bug fixes

[B]Version 2.7.4[/B]

- Speed up lists

[B]Version 2.7.3[/B]

- Fix for subtitles

[B]Version 2.7.2[/B]

- Fix for hulu search

[B]Version 2.7.1[/B]

- Update for Hulu site changes

[B]Version 2.7.0[/B]

- Rearranged Settings Panel
- Changed Default Settings
- Added settings for SWF Verify

[B]Version 2.6.9[/B]

- Fix for Popular, Recent, and Featured video names after second page.

[B]Version 2.6.8[/B]

- Fix for shows and movies with an apostrophe in their name

[B]Version 2.6.7[/B]

- added CDN priority selection

[B]Version 2.6.6[/B]

- Fix for videos with an apostrophe in their name

[B]Version 2.6.5[/B]

- Added artwork for Networks & Studios
- Huge speed up for Network & Studio lists


[B]Version 2.6.4[/B]

- intial offsite search support for
Adult Swim
Cartoon Network
CBS
TNT
TBS
MTV
VH1
CMT
Logo
Atom
Comedy Central
The Daily Show
South Park Digital Studios
Spike
TV Land
Revision3
Funny or Die
HBO
Nickelodeon
NickJr

[B]Version 2.6.3[/B]

- added search

[B]Version 2.6.2[/B]

- updated addon settings for compatability with xbmc4xbox

[B]Version 2.6.1[/B]

- fixed page and update listing bugs

[B]Version 2.6.0[/B]

- Added paging
- Added more per page settings

[B]Version 2.5.8[/B]

- UTF-8 encoding fix

[B]Version 2.5.7[/B]

- various fixes
- Enables subtitles

[B]Version 2.5.6[/B]

- Use pid from feed

[B]Version 2.5.5[/B]

- Added item count to some directory names

[B]Version 2.5.4[/B]

- Flattened "All" listing and forces 2000 items for listing.